CompatHelper: bump compat for Hyperscript to 0.0.5 for package WGLMakie, (keep existing compat)

--- a/WGLMakie/Project.toml
+++ b/WGLMakie/Project.toml
@@ -24,8 +24,9 @@ Colors = "0.11, 0.12"
 FileIO = "1.1"
 FreeTypeAbstraction = "0.10"
 GeometryBasics = "0.4.1"
-Hyperscript = "0.0.3, 0.0.4"
+Hyperscript = "0.0.3, 0.0.4, 0.0.5"
 JSServe = "v2.3"
+LinearAlgebra = "1.0, 1.6"
 Makie = "=0.20.2"
 Observables = "0.5.1"
 PNGFiles = "0.3, 0.4"
@@ -34,8 +35,6 @@ RelocatableFolders = "0.1, 0.2, 0.3, 1.0"
 ShaderAbstractions = "0.4"
 StaticArrays = "0.12, 1.0"
 julia = "1.3"
-LinearAlgebra = "1.0, 1.6"
-
 
 [extras]
 MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
