--- a/CairoMakie/Project.toml
+++ b/CairoMakie/Project.toml
@@ -24,7 +24,7 @@ FileIO = "1.1"
 FreeType = "3, 4.0"
 GeometryBasics = "0.4.1"
 LinearAlgebra = "1.0, 1.6"
-Makie = "=0.20.3"
+Makie = "=0.20.3, 0.21"
 PrecompileTools = "1.0"
 julia = "1.3"
 
