--- a/GLMakie/Project.toml
+++ b/GLMakie/Project.toml
@@ -22,7 +22,7 @@ ShaderAbstractions = "65257c39-d410-5151-9873-9b3e5be5013e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-ColorTypes = "0.9, 0.10, 0.11"
+ColorTypes = "0.9, 0.10, 0.11, 0.12"
 Colors = "0.11, 0.12"
 FileIO = "1.6"
 FixedPointNumbers = "0.7, 0.8"
