CompatHelper: bump compat for Colors to 0.13 for package CairoMakie, (keep existing compat)

--- a/CairoMakie/Project.toml
+++ b/CairoMakie/Project.toml
@@ -19,7 +19,7 @@ PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 CRC32c = "1.0, 1.6"
 Cairo = "1.0.4"
 Cairo_jll = "1.18.0"
-Colors = "0.10, 0.11, 0.12"
+Colors = "0.10, 0.11, 0.12, 0.13"
 FileIO = "1.1"
 FreeType = "3, 4.0"
 GeometryBasics = "0.4.11"
