CompatHelper: bump compat for Bonito to 4 for package WGLMakie, (keep existing compat)

--- a/WGLMakie/Project.toml
+++ b/WGLMakie/Project.toml
@@ -20,7 +20,7 @@ ShaderAbstractions = "65257c39-d410-5151-9873-9b3e5be5013e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-Bonito = "3.2.4"
+Bonito = "3.2.4, 4"
 Colors = "0.11, 0.12, 0.13"
 FileIO = "1.1"
 FreeTypeAbstraction = "0.10"
