--- a/Project.toml
+++ b/Project.toml
@@ -117,7 +117,7 @@ SparseArrays = "1.0, 1.6"
 Statistics = "1, 1.6"
 StatsBase = "0.31, 0.32, 0.33, 0.34"
 StatsFuns = "0.9, 1.0"
-StructArrays = "0.3, 0.4, 0.5, 0.6"
+StructArrays = "0.3, 0.4, 0.5, 0.6, 0.7"
 TriplotBase = "=0.1.0"
 UnicodeFun = "0.4"
 Unitful = "1"
