--- a/Project.toml
+++ b/Project.toml
@@ -83,7 +83,7 @@ FixedPointNumbers = "0.6, 0.7, 0.8"
 Format = "1.3"
 FreeType = "3.0, 4.0"
 FreeTypeAbstraction = "0.10.3"
-GeometryBasics = "0.4.11"
+GeometryBasics = "0.4.11, 0.5"
 GridLayoutBase = "0.11"
 ImageBase = "0.1.7"
 ImageIO = "0.5, 0.6"
