--- a/MakieCore/Project.toml
+++ b/MakieCore/Project.toml
@@ -11,7 +11,7 @@ Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 
 [compat]
 ColorTypes = "0.8, 0.9, 0.10, 0.11, 0.12"
-GeometryBasics = "0.4.11"
+GeometryBasics = "0.4.11, 0.5"
 IntervalSets = "0.6, 0.7"
 Observables = "0.5.1"
 julia = "1"
