CompatHelper: bump compat for ShaderAbstractions to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -110,7 +110,7 @@ REPL = "1.0, 1.6"
 Random = "1.0, 1.6"
 RelocatableFolders = "0.1, 0.2, 0.3, 1.0"
 Scratch = "1"
-ShaderAbstractions = "0.4"
+ShaderAbstractions = "0.4, 0.5"
 Showoff = "0.3, 1.0.2"
 SignedDistanceFields = "0.4"
 SparseArrays = "1.0, 1.6"
