--- a/GLMakie/Project.toml
+++ b/GLMakie/Project.toml
@@ -37,6 +37,6 @@ ModernGL = "1"
 Observables = "0.5.1"
 PrecompileTools = "1.0"
 Printf = "1.0, 1.6"
-ShaderAbstractions = "0.4"
+ShaderAbstractions = "0.4, 0.5"
 StaticArrays = "0.12, 1.0"
 julia = "1"
