--- a/GLMakie/Project.toml
+++ b/GLMakie/Project.toml
@@ -30,7 +30,7 @@ FreeTypeAbstraction = "0.10"
 GLFW = "3.4.3"
 GeometryBasics = "0.4.11"
 LinearAlgebra = "1.0, 1.6"
-Makie = "=0.21.15"
+Makie = "=0.21.15, 0.22"
 Markdown = "1.0, 1.6"
 MeshIO = "0.4"
 ModernGL = "1"
