--- a/RPRMakie/Project.toml
+++ b/RPRMakie/Project.toml
@@ -17,7 +17,7 @@ Colors = "0.9, 0.10, 0.11, 0.12, 0.13"
 FileIO = "1.6"
 GeometryBasics = "0.4.11"
 LinearAlgebra = "1.0, 1.6"
-Makie = "=0.21.15"
+Makie = "=0.21.15, 0.22"
 Printf = "1.0, 1.6"
 RadeonProRender = "0.3.0"
 julia = "1.3"
